full work basic

--- a/src/components/Game/StatusBar/styles.module.scss
+++ b/src/components/Game/StatusBar/styles.module.scss
@@ -1,6 +1,11 @@
 .bar{
     display: flex;
     padding: 10px;
+
+    background-color: white;
+    border-radius: 3px;
+    margin-bottom: 10px;
+
 }
 
 .section{
