--- a/src/components/Game/Board/LabelScreen/styles.module.scss
+++ b/src/components/Game/Board/LabelScreen/styles.module.scss
@@ -5,6 +5,12 @@
     height: 100%;
     align-items: center;
     justify-content: center;
+    position: absolute;
+    z-index: 10;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
 }
 
 .label {
