--- a/src/components/Game/Board/styles.module.scss
+++ b/src/components/Game/Board/styles.module.scss
@@ -1,6 +1,4 @@
 .board{
-    background-color: palegreen;
-    border-radius: 5px;
-    overflow: hidden;
+    background-color: #62D96B;
     position: relative;
 }
