--- a/src/components/Game/Board/Field/Cell/styles.module.scss
+++ b/src/components/Game/Board/Field/Cell/styles.module.scss
@@ -1,6 +1,6 @@
 .cell {
     position: absolute;
-    box-shadow: inset 0 0 2px rgba(#000, 0.2);
+    box-shadow: inset 0 0 1px rgba(#182026, 0.2);
     transition: background 100ms linear;
     border-radius: 2px;
 }
@@ -10,13 +10,25 @@
 }
 
 .snakeCell {
-    background: #333;
+    background: #293742;
 }
 
 .fruitCell {
-    background: red;
+    background: #db3737;
+    animation: fruitCellAppear linear 300ms;
 }
 
-.snakeHead{
+.snakeHead {
     transition: none !important;
+}
+
+@keyframes fruitCellAppear {
+    from {
+        transform: scale(1.5);
+        box-shadow: 0 0 10px rgba(#182026, 0.4);
+    }
+    to {
+        transform: scale(1);
+        box-shadow: 0 0 1px rgba(#182026, 0.4);
+    }
 }
