--- a/src/components/Game/Board/LabelScreen/styles.module.scss
+++ b/src/components/Game/Board/LabelScreen/styles.module.scss
@@ -1,5 +1,5 @@
 .screen {
-    background-color: rgba(#fff, 0.5);
+    background-color: rgba(#8A9BA8, 0.5);
     display: flex;
     width: 100%;
     height: 100%;
@@ -11,13 +11,15 @@
     right:0;
     bottom:0;
     left:0;
+    text-align: center;
+    animation: screenAppear 100ms linear;
 }
 
 .label {
     font-size: 40px;
     font-weight: bold;
     color: rgba(#000, 0.6);
-    text-shadow: 0 0 10px #FFF;
+    text-shadow: 0 0 5px rgba(#293742, 0.5);
 }
 
 .blink {
@@ -27,5 +29,14 @@
 @keyframes blink {
     50% {
         opacity: 0.2;
+    }
+}
+
+@keyframes screenAppear {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
     }
 }
