--- a/src/components/Game/styles.module.scss
+++ b/src/components/Game/styles.module.scss
@@ -1,3 +1,15 @@
 .game{
+    background-color: white;
+    overflow: hidden;
+    border-radius: 7px;
 
+    transition: box-shadow 500ms cubic-bezier(0.215, 0.61, 0.355, 1);
+
+    box-shadow: 0 0 100px 15px rgba(#738694, 0.2);
+}
+
+.flash{
+    transition: box-shadow 50ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+
+    box-shadow: 0 0 100px 15px rgba(#738694, 0.8);
 }
