--- a/src/components/Game/StatusBar/styles.module.scss
+++ b/src/components/Game/StatusBar/styles.module.scss
@@ -14,6 +14,11 @@
     text-align: left;
 }
 
+.logo{
+    flex-grow: 1;
+    text-align: center;
+}
+
 .valueContainer {
     transition: all 100ms linear;
     margin-left: 10px;
